app/styles/styles.css
/* ... */
          header #navbar > ul > li > a, header #navbar > ul > li > a:visited {
            background: #42748E;
            color: #FFFFFF; 
            font-weight: bold;
          }
          header #navbar ul li a:hover, header #navbar ul li a:visited:hover {
            background: #CDDCDD;
          }
          header #navbar > ul >  li > a:hover, header #navbar > ul > li > a:visited:hover {
            background: #003551;
          }

          header #navbar > ul >  li:hover > a {
            background: #003551;
          }

          header #navbar ul li a:not(:only-child):after, header #navbar ul li a:visited:not(:only-child):after {
            padding-right: 8px;
            content: ' ⌃ '; 
            transform: rotate(180deg);
            color: #FB9E36;}
        header #navbar ul li ul {
          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
          position: absolute;
          /* Slide-down animation*/
          visibility: hidden;
          opacity: 0;
          top: 100%;
          left: 50%;
          -webkit-transform: translateX(-50%) translateY(-2em);
                  transform: translateX(-50%) translateY(-2em);
          transition: all 0.2s ease-in-out 0s, visibility 0s linear 0.3s, z-index 0s linear 0.01s; }
          header #navbar ul li ul::after {
            clear: both;
            content: "";
            display: block; }
          header #navbar ul li ul li {
            width: calc(100%);
            float: left;
            margin-left: 0px;
            overflow: hidden; }
        header #navbar ul li:focus > ul, header #navbar ul li:hover > ul {
          /* All for animation*/
          visibility: visible;
          /* Becomes visible */
          opacity: 1;
          /* Fades in */
          -webkit-transform: translateX(-50%) translateY(0%);
                  transform: translateX(-50%) translateY(0%);
          /* Slides down */
          transition-delay: 0s, 0s, 0.3s; }
          .logo {
            padding-top: 10px;
          }

footer {
  /* Footer height */
  font-size: medium !important;
  font-family: "Nunito Sans" !important;
  box-sizing: border-box;
  background-color: #002131;
  color: #fff;
  padding: 25px;
  position: relative;
  z-index: 999; }
  footer::after {
    clear: both;
    content: "";
    display: block; }
  footer div.footer-name {
    width: calc(20%);
    float: left;
    margin-left: 0px;
    line-height: 6rem;
    height: 12rem; 
  }
    footer div.footer-name * {
      float: left; }
    .igemlogo {
      width: 100%;
      padding: 0 1em;
      max-width: 180px;
    }
  footer div.spacer {
    width: calc(60%);
    display: flex;
    justify-content: space-evenly;
    float: left;
    margin-left: 0px;
    line-height: 1.5rem;
    height: 12rem;
    /*text-align: center*/ }

    @media only screen and (max-width: 700px) {
      footer div.spacer {
        width: 0;
        visibility: hidden;
      }
      footer div.social-container {
        width: calc(50%) !important;
      }
      footer div.footer-name {
        width: calc(50%) !important;
      }
    }

  footer h1 {
    border-bottom: 3px solid #FB9E36;
    display:inline-block; 
    padding-bottom: 5px;
    font-weight: bold;
  }

  .spacer ul li a {
    color: #CDDCDD;
  }
  
  .spacer ul li a:hover {
    color: #FB9E36;
  }

  .linkcol {
    line-height: 24px;
  }

  .linkcol h1 {
    line-height: 16px;
  }

  footer div.spacer:after {
    content: "";
    display: table;
    clear: both;
  }
  
  footer div.social-container {
    width: calc(20%);
    float: right;
    margin-left: 0px; 
    height: 12rem;
    max-width: 150px;
  }

/*Code courtesy of https://codepen.io/brandondward/pen/RpyaKL*/
/*Social media icons*/
/*#ff003c;*/
/*#c648c8;*/
.social-container {
  float: left;
  margin-left: 20px; }

.social-icons {
  padding: 0;
  list-style: none;
  margin: 0; }
  .social-icons li {
    display: inline-block;
    margin: 0.15em;
    position: relative;
    font-size: 1.7em !important; }
  .social-icons i {
    color: black;
    position: absolute;
    top: 13px;
    left: 13px; }
  .social-icons a {
    display: inline-block;
    /*@include grid-visual;*/ }
    .social-icons a:before {
      content: " ";
      width: 50px;
      height: 50px;
      border-radius: 100%;
      display: block;
      background: #fff; }

/* Style the element that is used to open and close the accordion class */
div.accordion {
  background-color: #CDDCDD;
  color: #003650;
  padding: 18px;
  width: 85%;
  text-align: left;
  border: none;
  outline: none;
  margin: auto;
}

div.accordion:after {
  content: '\2303'; 
  transform: rotate(180deg);
  font-size: 26px;
  color: #FB9E36;
  float: right;
  margin-left: 5px;
  font-weight: 800;
}

div.accordion.active:after {
  content: ""; 
  transform: rotate(360deg);
  font-size: 26px;
  font-weight: 800;
}

div.panel.show:after {
  content: "\2303"; 
  transform: rotate(360deg);
  font-size: 26px;
  font-weight: 800;
  float: right;
  margin-left: 5px;
  color: #FB9E36;
}

/* Style the element that is used for the panel class */
div.panel {
  padding: 18px;
  background-color: #CDDCDD;
  color: #003650;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  width: 85%;
  margin: auto;
  text-align: left;
  border: none;
  outline: none;
}

div.panel.show {
  opacity: 1;
  max-height: 700px;
  margin: auto;
}

div.labsubteam {
  width: 85%;
  padding: 12px 40px;
  font-weight: bold;
  font-size: 20px;
  text-align: left;
  margin: auto;
  color: #003650;
}

div.humansubteam {
  width: 85%;
  padding: 12px 40px;
  font-weight: bold;
  font-size: 20px;
  text-align: left;
  margin: auto;
  color: #003650;
}

div.mathsubteam {
  width: 85%;
  padding: 12px 40px;
  font-weight: bold;
  font-size: 20px;
  text-align: left;
  margin: auto;
  color: #003650;
}
/* ... */

